src/test/deca/context/valid/created/signature.deca


class B 
{
  int b(int d ){
   return (3) ;
  }
}