src/test/deca/context/invalid/created/noreturn.deca
class Y {
  int  a (int k) {
   println("ddd");

  }
}